--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -4,8 +4,7 @@
     
     display: flex;
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
+
     background-color: white;
     margin-bottom: 300px;
     
@@ -20,13 +19,14 @@
 
 }
 
-.checkout_title{
+.title{
     margin-right:10px;
     padding:10px;
     border-bottom:1px solid #ececec;
 }
 
-.checkout_right{
+.right{
     margin-right: 10px;
-    padding:10px;
+    padding: 50px;
+
 }
