Includes category page and list of product/items.
    Commit version that includes

    -Items on display
    Close #2

    -Checkout process
    Close #4

    -Frontend homepage
    Close #8

    -Frontend footer
    Close #10

    -Category item display
    Close #19

    -Separate page to cart
    Close #21

    -Order history page
    Close #24

    -Add products to cart feature
    Close #30

    -Create login page, feature, and registration feature
    Close #33

    -Fix bug with item page
    Close #38

    Features still in development : Admin login, admin add products,
    delivery fees and order cancel feature.

--- a/src/Footer/footer.css
+++ b/src/Footer/footer.css
@@ -1,6 +1,6 @@
 
 .amazon-footer {
-    background-color: #232f3e;
+    background-color: rgb(13,59,102);
     margin-top:auto; 
     min-height:50px;
   }
