--- a/src/Product.css
+++ b/src/Product.css
@@ -1,15 +1,23 @@
 .product {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: flex-end;
     margin: 10px;
     padding: 20px;
     width: 100%;
-    max-height: 400px;
+    max-height: 450px;
+    border-radius: 20px;
+    margin-top: 10px;
+    align-items: center;
     min-width: 100px;
     background-color: white;
+    border: 2px solid lightblue;
+    
     z-index: 1;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
   
   .product__rating {
@@ -23,30 +31,20 @@
     margin-bottom: 15px;
   }
   
-  .product > button {
-    background: #f0c14b;
-    border: 3px solid;
-    margin-top: 15px;
-    width:100%;
-    height: 30px;
-    
-    border-color: #a88734 #9c7e31 #846a29;
-    color: #111;
-  }
   
   .product_rating{
       display: flex;
   }
 
-  .product__price {
-    margin-top: 5px;
+  .price {
+    margin-top: 10px;
+    align-items: center;
   }
   
-  .product__info {
-    height: 100px;
-    margin-bottom: 15px;
-  }
+  
 
-  .product_title{
-    margin-top: 50px;
+  .title{
+    margin-top: 10px;
+    align-items: center;
+    font-size: 20px;    
   }
