--- a/src/Orders.css
+++ b/src/Orders.css
@@ -4,8 +4,9 @@
 
 .order {
 
-    border: 5px solid gray;
+    border: 5px solid rgb(48, 45, 172);
     position: relative;
     padding: 60px;
+    margin-top: 30px;
 }
 
