Search products, categoriesm and total Firebase #45 #44 #42 Firebase total integration achieved, for categories and add/edit/remove Search feature with partial string query functionality (Search Ch gets shows Chair) Category integrated with Firebase, dropdown option for categories. Add logo and new website name Other minor changes Closes #45 Closes #44 Closes #42

--- a/src/Orders.css
+++ b/src/Orders.css
@@ -1,5 +1,7 @@
 .orders {
     padding: 50px;
+    min-height: 400px;
+    margin-top: -30px;
 }
 
 .order {
@@ -8,5 +10,6 @@
     position: relative;
     padding: 60px;
     margin-top: 30px;
+    background-color: white;
 }
 
